code commit@Rahul
development of mrn form

--- a/src/main/resources/templates/layouts/Master/mrn.html
+++ b/src/main/resources/templates/layouts/Master/mrn.html
@@ -453,7 +453,7 @@ iframe {
 																		</select></td>
 
 																		<td>
-																			<button data-toggle="modal" th:attr="data-target=${'#editModal'+1}" data-row="${row}">DEL</button>
+																			<a href="mrnTaxInfo">click</a>
 																		</td>
 
 
@@ -514,21 +514,7 @@ iframe {
 
 	<!-- modal -->
 
-	<div>
-  <div class="modal-body">
-    <div class="modal-body">
-       You are about to delete: 
-     <!--   <div th:text="${row.firstname}"/> <div th:text="${row.lastname}"/> -->
-
-      <h1>hello</h1>
-    </div>
-
-    <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        
-    </div>
-  </div>
-</div>
+	
 
 	<!-- end modal   -->
 
