--- a/src/main/resources/templates/layouts/Master/mrnInspection.html
+++ b/src/main/resources/templates/layouts/Master/mrnInspection.html
@@ -47,8 +47,7 @@ iframe {
 
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini"
-	onload="againstPurchaseThrough()">
+<body class="hold-transition skin-blue sidebar-mini">
 	<div class="wrapper">
 		<div>
 			<div th:replace="fragments/header :: header">...</div>
@@ -61,7 +60,7 @@ iframe {
 					<!-- Content Header (Page header) -->
 					<section class="content-header">
 						<h4>
-							Material Receipt
+							Inspection
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
@@ -99,160 +98,100 @@ iframe {
 											</div>
 											<!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/mrn/}" th:object="${mrn}"
+											<form role="form" th:action="@{/inspection/}" th:object="${inspection}"
 												method="POST">
 
 												<div class="box">
-													<h5 class="box-title">Material Receipt Master</h5>
+													<h5 class="box-title">Inspection</h5>
 													<div class="box-body">
 
 
 														<div class="form-group col-md-3">
-															<label for="inputEmail4">MRN No</label> <input
+															<label for="inputEmail4">Inspection No</label> <input
 																type="text" class="form-control" id="inputEmail4"
-																placeholder="Gate Sr No" th:field="*{mrnNo}">
+																placeholder="Inspection No" title="inspection no"th:field="*{inspNo}">
 														</div>
 														<div class="form-group col-md-3">
-															<label for="inputPassword4">MRN Date</label> <input
-																type="date" class="form-control" id="mrnGateEntryDate"
-																th:field="*{mrnDate}">
+															<label for="inputPassword4">Inspection Date</label> <input
+																type="date" class="form-control" id="inspectionDate"
+																th:field="*{inspDate}" title="inspection date">
 														</div>
 
 
 
 														<div class="form-group col-md-3">
-															<label for="inputAddress">Gate Entry No</label> <select
-																class="form-control" id="" title="entry type"
-																th:field="*{gateEntryNo}">
-																<option value="">Select Department</option>
-																<option th:each="gateEntry :  ${gateEntryList}"
+															<label for="inputAddress">LOT Status</label> <select
+																class="form-control" id="" title="lot status"
+																th:field="*{lotStatus}">
+																<option value="ac">Actual</option>
+																
+																<!-- <option th:each="gateEntry :  ${gateEntryList}"
 																	th:text="${gateEntry.gateSrNo}"
-																	th:value=" ${gateEntry.gateSrNo}"></option>
+																	th:value=" ${gateEntry.gateSrNo}"></option> -->
 
 															</select>
 														</div>
-
-
+														
+														
 														<div class="form-group col-md-3">
-															<label class="form-label">Gate Entry Date</label> <input
-																type="date" class="form-control" id="mrnGateEntryDate"
-																th:field="*{gateEntryDate}">
-														</div>
-
-
-
-
-
-														<div class="form-group col-md-3">
-															<label class="form-label">Supplier Code</label> <label
-																style="color: red">*</label> <select
-																class="form-control" id="mrnSupplierCode"
-																title="supplier code" th:field="*{supplierMaster}">
+															<label for="inputAddress">Mrn No</label> <select
+																class="form-control" id="mrnNo" title="mrn no"
+																th:field="*{mrn}" onchange="mrnInfo()">
 																<option value="">Select</option>
-																<option th:each="supplier :  ${supplierList}"
-																	th:text="${supplier.supplierName}"
-																	th:value=" ${supplier.supplierRepo}"></option>
-
-
-															</select>
-														</div>
-
-
-														<div class="form-group col-md-3">
-															<label for="inputPassword4">Supplier Name</label> <input
-																type="text" class="form-control"
-																placeholder="Supplier Name" title="supplier name">
-														</div>
-
-														<div class="form-group col-md-3">
-															<label for="inputPassword4">Received By</label> <input
-																type="text" class="form-control"
-																placeholder="Supplier Name" title="supplier name">
-														</div>
-
-														<div class="form-group col-md-3">
-															<label class="form-label">Bill Type</label> <select
-																class="form-control" id="" title="gst type"
-																th:field="*{billType}">
-																<option value="b" selected>Bill</option>
-																<option value="t">Trading</option>
-
-															</select>
-														</div>
-
-														<div class="form-group col-md-3">
-															<label for="inputPassword4">Bill No</label> <input
-																type="text" class="form-control" th:field="*{billNo}"
-																placeholder="Supplier Name" title="supplier name">
-														</div>
-
-
-														<div class="form-group col-md-3">
-															<label class="form-label">GST</label> <select
-																class="form-control" id="" title="gst type">
-																<option value="g" selected>GST</option>
-																<option value="n">NON-GST</option>
-
-															</select>
-														</div>
-
-														<div class="form-group col-md-3">
-															<label class="form-label">MRN Type</label> <select
-																class="form-control" id="" title="gst type"
-																th:field="*{mrnType}">
-																<option value="c" selected>Capital</option>
-																<option value="n">Non-Capital</option>
-
-															</select>
-														</div>
-
-														<div class="form-group col-md-3">
-															<label class="form-label">Currency Code</label> <select
-																class="form-control" id="mrnCurrencyCode"
-																title="gst type" th:field="*{currency}">
-																<option value="" selected>select</option>
-																<option th:each="currency :  ${currencyList}"
-																	th:text="${currency.currencyValue}"
-																	th:value=" ${currency.currencyCode}"></option>
-
+																
+																<option th:each="mrm :  ${mrmList}"
+																	th:text="${mrm.mrnNo}"
+																	th:value=" ${mrm.mrnNo}"></option>
 
 															</select>
 														</div>
 
 
 														<div class="form-group col-md-3">
-															<label for="inputPassword4">Currency Name</label> <input
-																type="text" class="form-control"
-																placeholder="Currency Name" title="currency name">
+															<label class="form-label">Mrn Date</label> <input
+																type="date" class="form-control" id="mrnDate"
+																th:field="*{mrnDate}" title="mrn date">
 														</div>
 
-														<div class="form-group col-md-3">
-															<label class="form-label">Material Type</label> <select
-																class="form-control" id="" title="gst type">
-																<option value="" selected>PO</option>
 
+
+
+
+														<div class="form-group col-md-3">
+															<label for="inputAddress">Entry Mode</label> <select
+																class="form-control" id="" title="entry mode"
+																th:field="*{entryMode}">
+																<option value="d">Entering Directly</option>
+																
+																
 
 															</select>
 														</div>
 
 
 														<div class="form-group col-md-3">
-															<label for="inputPassword4">Date of Bill</label> <input
-																type="date" class="form-control" title="date of bill"
-																th:field="*{billDate}">
+															<label for="inputAddress">Employee Type</label> <select
+																class="form-control" id="" title="employee type"
+																th:field="*{entryType}">
+																<option value="e">Employee</option>
+																
+																
+
+															</select>
 														</div>
 
+													
 														<div class="form-group col-md-3">
-															<label for="inputPassword4">Date of Receipt</label> <input
-																type="date" class="form-control" title="date of bill"
-																th:field="*{reciepDate}">
-														</div>
+															<label for="inputAddress">Employee Name</label> <select
+																class="form-control" id="" title="employee name"
+																th:field="*{employee}">
+																<option value="">Select</option>
+																
+																<option th:each="employee :  ${employeeList}"
+																	th:text="${employee.empName}"
+																	th:value=" ${employee.empCode}"></option>
 
-														<div class="form-group col-md-3">
-															<label for="inputPassword4">Conversion Value</label> <input
-																type="text" class="form-control"
-																placeholder="Conversion Value" title="conversion value"
-																th:field="*{conversionvalue}">
+															</select>
 														</div>
 
 
@@ -338,10 +277,10 @@ iframe {
 																</thead>
 
 																<tbody>
-																	<tr id="addr0">
+																	<!-- <tr id="addr0">
 
 
-																		<!-- matrial type  -->
+																		matrial type 
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
 																			id="orderIndentNumberPo"
@@ -353,17 +292,17 @@ iframe {
 
 
 																		</select></td>
-																		<!-- item code -->
+																		item code
 																		<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="orderIndentDatePo" title="order date"
 																			name="mrnDetails[0].item"></td>
 
-																		<!-- item name -->
+																		item name
 																		<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="orderIndentDatePo" title="item name"></td>
-																		<!-- Account Name -->
+																		Account Name
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
 																			id="orderIndentNumberPo"
@@ -374,74 +313,74 @@ iframe {
 
 
 																		</select></td>
-																		<!-- UOM -->
+																		UOM
 																		<td><input type="number" title="uom"
 																			class="form-control form-control-sm"></td>
-																		<!-- po qty   -->
+																		po qty  
 																		<td><input type="number"
 																			class="form-control form-control-sm" title="po qty"></td>
-																		<!-- inr qty -->
+																		inr qty
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="inv qty"
 																			name="mrnDetails[0].itemInv"></td>
 
-																		<!-- rec qty  -->
+																		rec qty 
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="orderItemuom" title="rec qty"
 																			name="mrnDetails[0].itemRec"></td>
 
 
-																		<!-- po rate curr -->
+																		po rate curr
 
 																		<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="po rate curr"></td>
 
-																		<!-- po rate  -->
+																		po rate 
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="po rate"
 																			name="mrnDetails[0].itemRate"></td>
 
-																		<!-- bill rate  -->
+																		bill rate 
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="bill rate"
 																			name="mrnDetails[0].itemrateOnBill"></td>
 
-																		<!-- total cost   -->
+																		total cost  
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="total cost"
 																			name="mrnDetails[0].totalvalue"></td>
 
-																		<!-- net cost  -->
+																		net cost 
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="net cost"
 																			name="mrnDetails[0].itemNetVal"></td>
 
 
-																		<!-- total pur cost  -->
+																		total pur cost 
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="total pur cost"
 																			name="mrnDetails[0].totalPurCost"></td>
 
-																		<!-- total inr cost  -->
+																		total inr cost 
 																		<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="total inr cost"></td>
 
-																		<!-- remarks   -->
+																		remarks  
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="remarks"
 																			name="mrnDetails[0].totalPurCost"></td>
 
-																		<!-- dol -->
+																		dol
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
 																			id="orderIndentNumberPo" title="dol">
@@ -459,7 +398,7 @@ iframe {
 
 
 
-																	</tr>
+																	</tr> -->
 																	<tr id='addr1' />
 
 																</tbody>
@@ -490,7 +429,7 @@ iframe {
 										<!-- /.box -->
 										<div
 											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/gateentry/list}">View All Gate-Entry</a>
+											<a th:href="@{/inspection/list}">View All Inspection</a>
 										</div>
 									</div>
 
@@ -512,11 +451,25 @@ iframe {
 
 
 
-	<!-- modal -->
-
+	<script>
 	
+	function mrnInfo(){
+		var mrnNO = document.getElementById("mrnNO").value;
+		$.ajax({
+			type: "GET",
+			url: "/inspection/mrninfo/" + mrnNo,
 
-	<!-- end modal   -->
+			success: function(data) {
+				//$("#resultarea").text(data);
+				console.log("response data : " + data);
+				$("#mrnDate").val(data.mrnDate);
+				
+			}, error: function() {
+				console.log("Error");
+			}
+		});
+	}
+	</script>
 
 
 	<script>
@@ -524,7 +477,7 @@ iframe {
 				.ready(
 						function() {
 
-							document.getElementById('mrnGateEntryDate').valueAsDate = new Date();
+							document.getElementById('inspectionDate').valueAsDate = new Date();
 
 						});
 	</script>
