--- a/src/main/resources/templates/layouts/Master/mrnInspection.html
+++ b/src/main/resources/templates/layouts/Master/mrnInspection.html
@@ -98,8 +98,8 @@ iframe {
 											</div>
 											<!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/inspection/}" th:object="${inspection}"
-												method="POST">
+											<form role="form" th:action="@{/inspection/}"
+												th:object="${inspection}" method="POST">
 
 												<div class="box">
 													<h5 class="box-title">Inspection</h5>
@@ -109,7 +109,8 @@ iframe {
 														<div class="form-group col-md-3">
 															<label for="inputEmail4">Inspection No</label> <input
 																type="text" class="form-control" id="inputEmail4"
-																placeholder="Inspection No" title="inspection no"th:field="*{inspNo}">
+																placeholder="Inspection No" title="inspection no"
+																th:field="*{inspNo}">
 														</div>
 														<div class="form-group col-md-3">
 															<label for="inputPassword4">Inspection Date</label> <input
@@ -124,24 +125,23 @@ iframe {
 																class="form-control" id="" title="lot status"
 																th:field="*{lotStatus}">
 																<option value="ac">Actual</option>
-																
+
 																<!-- <option th:each="gateEntry :  ${gateEntryList}"
 																	th:text="${gateEntry.gateSrNo}"
 																	th:value=" ${gateEntry.gateSrNo}"></option> -->
 
 															</select>
 														</div>
-														
-														
+
+
 														<div class="form-group col-md-3">
 															<label for="inputAddress">Mrn No</label> <select
 																class="form-control" id="mrnNo" title="mrn no"
 																th:field="*{mrn}" onchange="mrnInfo()">
 																<option value="">Select</option>
-																
+
 																<option th:each="mrm :  ${mrmList}"
-																	th:text="${mrm.mrnNo}"
-																	th:value=" ${mrm.mrnNo}"></option>
+																	th:text="${mrm.mrnNo}" th:value=" ${mrm.mrnNo}"></option>
 
 															</select>
 														</div>
@@ -162,8 +162,8 @@ iframe {
 																class="form-control" id="" title="entry mode"
 																th:field="*{entryMode}">
 																<option value="d">Entering Directly</option>
-																
-																
+
+
 
 															</select>
 														</div>
@@ -174,19 +174,19 @@ iframe {
 																class="form-control" id="" title="employee type"
 																th:field="*{entryType}">
 																<option value="e">Employee</option>
-																
-																
+
+
 
 															</select>
 														</div>
 
-													
+
 														<div class="form-group col-md-3">
 															<label for="inputAddress">Employee Name</label> <select
 																class="form-control" id="" title="employee name"
 																th:field="*{employee}">
 																<option value="">Select</option>
-																
+
 																<option th:each="employee :  ${employeeList}"
 																	th:text="${employee.empName}"
 																	th:value=" ${employee.empCode}"></option>
@@ -228,63 +228,56 @@ iframe {
 
 
 																		<th scope="col" class="text-center"
-																			style="width: 100px;">Material Type</th>
+																			style="width: 100px;">Rep Out No</th>
+																		<th scope="col" class="text-center"
+																			style="width: 90px;">Rep Out Date</th>
 																		<th scope="col" class="text-center"
 																			style="width: 90px;">Item Code</th>
 																		<th scope="col" class="text-center"
-																			style="width: 90px;">Item Name</th>
+																			style="width: 90px;">Description</th>
 																		<th scope="col" class="text-center"
-																			style="width: 90px;">Account Name</th>
+																			style="width: 10px;">Item Received</th>
 																		<th scope="col" class="text-center"
-																			style="width: 10px;">UOM</th>
+																			style="width: 120px;">UOM</th>
 																		<th scope="col" class="text-center"
-																			style="width: 120px;">PO Qty</th>
+																			style="width: 90px;">MRN Qty</th>
 																		<th scope="col" class="text-center"
-																			style="width: 90px;">INR Qty</th>
+																			style="width: 90px;">MRN Rate</th>
 																		<th scope="col" class="text-center"
-																			style="width: 90px;">Rec Qty</th>
+																			style="width: 120px;">Deviation Qty</th>
 																		<th scope="col" class="text-center"
-																			style="width: 120px;">PO Rate Curr</th>
-																		<th scope="col" class="text-center"
-																			style="width: 120px;">PO Rate</th>
+																			style="width: 120px;">Rate of Der.Qty</th>
 
 																		<th scope="col" class="text-center"
-																			style="width: 120px;">Bill Rate</th>
+																			style="width: 120px;">Rejected Qty</th>
 
 																		<th scope="col" class="text-center"
-																			style="width: 120px;">Total Cost</th>
+																			style="width: 120px;">Inspection Qty</th>
 
 																		<th scope="col" class="text-center"
-																			style="width: 120px;">Net Cost</th>
+																			style="width: 120px;">Pending Qty</th>
 
 																		<th scope="col" class="text-center"
-																			style="width: 120px;">Total Purr Cost</th>
-
-																		<th scope="col" class="text-center"
-																			style="width: 120px;">Total INR Cost</th>
+																			style="width: 120px;">Inspection Status</th>
 
 																		<th scope="col" class="text-center"
 																			style="width: 120px;">Remarks</th>
 
-																		<th scope="col" class="text-center"
-																			style="width: 120px;">DOL</th>
 
-																		<th scope="col" class="text-center"
-																			style="width: 120px;">Tax</th>
 
 
 																	</tr>
 																</thead>
 
 																<tbody>
-																	<!-- <tr id="addr0">
+																	<tr id="addr0">
 
 
-																		matrial type 
+																		<!-- Rep Out No -->
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
 																			id="orderIndentNumberPo"
-																			name="mrnDetails[0].matServType"
+																			name="mrnInspectionItems[0].repOutNo"
 																			title="indent number">
 																				<option value="">Select</option>
 																				<option value="m">M</option>
@@ -292,113 +285,106 @@ iframe {
 
 
 																		</select></td>
-																		item code
+
+																		<!-- ep Out Date -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="orderIndentDatePo" title="order date"
-																			name="mrnDetails[0].item"></td>
+																			name="mrnInspectionItems[0].repOutDate"></td>
 
-																		item name
+
+																		<!-- Item Code -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="orderIndentDatePo" title="item name"></td>
-																		Account Name
+																			id="orderIndentDatePo" title="item name"
+																			name="mrnInspectionItems[0].item"></td>
+
+																		<!-- Description -->
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
 																			id="orderIndentNumberPo"
-																			name="mrnDetails[0].itemAccCode" title="account name">
+																			title="account name">
 																				<option value="">Select</option>
 																				<option value="ac-1">Ac01</option>
 																				<option value="ac-2">Ac02</option>
 
 
 																		</select></td>
-																		UOM
+
+																		<!-- Item Received -->
 																		<td><input type="number" title="uom"
-																			class="form-control form-control-sm"></td>
-																		po qty  
+																			class="form-control form-control-sm"
+																			name="mrnInspectionItems[0].itemRec1"></td>
+
+																		<!-- UOM -->
 																		<td><input type="number"
-																			class="form-control form-control-sm" title="po qty"></td>
-																		inr qty
+																			class="form-control form-control-sm" title="po qty"
+																			></td>
+
+																		<!--Mrn Qty  -->
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="inv qty"
-																			name="mrnDetails[0].itemInv"></td>
+																			name="mrnInspectionItems[0].qtyUd"></td>
 
-																		rec qty 
+																		<!-- Mrn rate -->
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="orderItemuom" title="rec qty"
-																			name="mrnDetails[0].itemRec"></td>
+																			name="mrnInspectionItems[0].mrnRate"></td>
 
 
-																		po rate curr
 
+																		<!-- Deviration qty -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="technicalQualification" title="po rate curr"></td>
+																			id="technicalQualification" title="po rate curr"
+																			name="mrnInspectionItems[0].qtyAcceptDev"></td>
 
-																		po rate 
+																		<!-- RAte of der Qty  -->
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="po rate"
-																			name="mrnDetails[0].itemRate"></td>
+																			name="mrnInspectionItems[0].qtyAcceptDevRate"></td>
 
-																		bill rate 
+																		<!-- Rejected Qty  -->
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="bill rate"
-																			name="mrnDetails[0].itemrateOnBill"></td>
+																			name="mrnInspectionItems[0].qtyRejected"></td>
 
-																		total cost  
+																		<!-- Inspection Qty -->
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="total cost"
-																			name="mrnDetails[0].totalvalue"></td>
+																			name="mrnInspectionItems[0].inspectedQty"></td>
 
-																		net cost 
+																		<!-- pending qty -->
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="net cost"
-																			name="mrnDetails[0].itemNetVal"></td>
+																			name="mrnInspectionItems[0].qtyPending"></td>
 
 
-																		total pur cost 
+																		<!-- inspection status -->
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="total pur cost"
-																			name="mrnDetails[0].totalPurCost"></td>
+																			name="mrnInspectionItems[0].inspStatus"></td>
 
-																		total inr cost 
+																		<!-- Remarks	 -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="technicalQualification" title="total inr cost"></td>
-
-																		remarks  
-																		<td><input type="number"
-																			class="form-control form-control-sm"
-																			id="technicalQualification" title="remarks"
-																			name="mrnDetails[0].totalPurCost"></td>
-
-																		dol
-																		<td><select
-																			class="form-control indentContainer form-control-sm select"
-																			id="orderIndentNumberPo" title="dol">
-																				<option value="">Select</option>
-																				<option value="y">YES</option>
-																				<option value="n">NO</option>
-
-
-																		</select></td>
-
-																		<td>
-																			<a href="mrnTaxInfo">click</a>
-																		</td>
+																			id="technicalQualification" title="total inr cost"
+																			></td>
 
 
 
 
-																	</tr> -->
+
+
+
+																	</tr>
 																	<tr id='addr1' />
 
 																</tbody>
@@ -452,34 +438,32 @@ iframe {
 
 
 	<script>
-	
-	function mrnInfo(){
-		var mrnNO = document.getElementById("mrnNO").value;
-		$.ajax({
-			type: "GET",
-			url: "/inspection/mrninfo/" + mrnNo,
+		function mrnInfo() {
+			var mrnNO = document.getElementById("mrnNO").value;
+			$.ajax({
+				type : "GET",
+				url : "/inspection/mrninfo/" + mrnNo,
 
-			success: function(data) {
-				//$("#resultarea").text(data);
-				console.log("response data : " + data);
-				$("#mrnDate").val(data.mrnDate);
-				
-			}, error: function() {
-				console.log("Error");
-			}
-		});
-	}
+				success : function(data) {
+					//$("#resultarea").text(data);
+					console.log("response data : " + data);
+					$("#mrnDate").val(data.mrnDate);
+
+				},
+				error : function() {
+					console.log("Error");
+				}
+			});
+		}
 	</script>
 
 
 	<script>
-		$(document)
-				.ready(
-						function() {
+		$(document).ready(function() {
 
-							document.getElementById('inspectionDate').valueAsDate = new Date();
+			document.getElementById('inspectionDate').valueAsDate = new Date();
 
-						});
+		});
 	</script>
 
 
