code commit@Rahul;
works on inspection approval form

--- a/src/main/resources/templates/layouts/Master/mrnInspection.html
+++ b/src/main/resources/templates/layouts/Master/mrnInspection.html
@@ -400,7 +400,11 @@ iframe {
 
 
 												<!--end detail box-->
+												
+												
+												<!-- bottom block -->
 
+												<!-- end bottom block -->
 
 
 
