--- a/src/main/resources/templates/layouts/Master/financialyear.html
+++ b/src/main/resources/templates/layouts/Master/financialyear.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
+<head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>EBS</title>
@@ -109,15 +109,15 @@
 													</div>
 													<div class="form-group col-md-12">
 														<label for="inputPassword4">From (Date)</label><span
-															style="color: red">*</span> <input type="text"
-															class="form-control" name="fromDate" id="fromDate"
+															style="color: red">*</span> <input type="date"
+															class="form-control"
 															placeholder='From Date' title="This field is required"
 															th:field="*{fromDate}" required />
 													</div>
 													<div class="form-group col-md-12">
 														<label for="inputEmail4">To (Date)</label><span
-															style="color: red">*</span> <input type="text"
-															class="form-control" name="datepicker" id="datepicker"
+															style="color: red">*</span> <input type="date"
+															class="form-control"
 															placeholder='To Date' title="This field is required"
 															th:field="*{toDate}" required />
 													</div>
@@ -158,7 +158,7 @@
 										<!-- /.box -->
 										<div
 											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/financialyear/list}">View All Financial
+											<a th:href="@{/financialyear/list}">View All Financialhghgf
 												Year</a>
 										</div>
 									</div>
@@ -200,19 +200,7 @@
 				});
 
 
-				$("#datepicker").datepicker({
-					format: "yyyy",
-					viewMode: "years",
-					minViewMode: "years",
-					autoclose: true //to close picker once year is selected
-				});
 				
-				$("#fromDate").datepicker({
-					format: "yyyy",
-					viewMode: "years",
-					minViewMode: "years",
-					autoclose: true //to close picker once year is selected
-				});
 			</script>
 	<!--   <section class="content">
         
