code commit@RAhul
display login user and  css of menu bar

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" 
+		xmlns:sec="http://www.thymeleaf.org/extras/spring-security"lang="en">
 
 <header class="main-header" th:fragment="header">
 	<!-- Logo -->
-	<a href="../../index2.html" class="logo">
+	<a th:href="@{/home}" class="logo">
 		<!-- mini logo for sidebar mini 50x50 pixels -->
 		<span class="logo-mini"><b>E</b>RP</span>
 		<!-- logo for regular state and mobile devices -->
@@ -16,6 +17,7 @@
 
 
 		<a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+			
 			<span class="sr-only">Toggle navigation</span>
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
@@ -50,7 +52,7 @@
 							<li class="user-header">
 								<img src="/img/contact.png" class="img-circle" alt="User Image">
 								<p>
-									User- Web Developer
+									 <span sec:authentication="name">Bob</span>
 									<small>Member since Nov. 2021</small>
 								</p>
 							</li>
@@ -58,10 +60,10 @@
 
 							<!-- Menu Footer-->
 							<li class="user-footer">
-								<div class="pull-left">
+								<!-- <div class="pull-left">
 									<a href="#" class="btn btn-default btn-flat">Profile</a>
-								</div>
-								<div class="pull-right">
+								</div> -->
+								<div class="text-center">
 									<a th:href="@{/login?logout}" class="btn btn-default btn-flat">Sign out</a>
 								</div>
 							</li>
