--- a/src/main/resources/templates/layouts/Master/financialyear.html
+++ b/src/main/resources/templates/layouts/Master/financialyear.html
@@ -158,7 +158,7 @@
 										<!-- /.box -->
 										<div
 											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/financialyear/list}">View All Financialhghgf
+											<a th:href="@{/financialyear/list}">View All Financial
 												Year</a>
 										</div>
 									</div>
