--- a/src/main/resources/templates/layouts/index.html
+++ b/src/main/resources/templates/layouts/index.html
@@ -2,76 +2,91 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>AdminLTE 2 | General Form Elements</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>AdminLTE 2 | General Form Elements</title>
 
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
 
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
-	<link rel="stylesheet" href="css/AdminLTE.min.css">
+<link rel="stylesheet" href="css/AdminLTE.min.css">
 
-	<link rel="stylesheet" href="css/skins/_all-skins.min.css">
+<link rel="stylesheet" href="css/skins/_all-skins.min.css">
 
 
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
 	<div th:replace="fragments/header :: header">...</div>
-			<div th:replace="fragments/sidebar :: sidebar">...</div>
-	
+	<div th:replace="fragments/sidebar :: sidebar">...</div>
+
 	<div class="wrapper">
-			
-			
-      <div class="content-wrapper">
-        <!-- Content Header (Page header) -->
-        <section class="content-header">
-          <h1>
-            Blank page
-            <small>it all starts here</small>
-          </h1>
-          <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li><a href="#">Examples</a></li>
-            <li class="active">Blank page</li>
-          </ol>
-        </section>
 
-        <!-- Main content -->
-        <section class="content">
 
-          <!-- Default box -->
-          <div class="box">
-            <div class="box-header with-border">
-              <h3 class="box-title">Title</h3>
-              <div class="box-tools pull-right">
-                <button class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
-                <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
-              </div>
-            </div>
-           
-           
-            <div class="box-body">Start creating your amazing application!
-			
-		
-            
-            
-            <div class="box-footer">
-              Footer
-            </div><!-- /.box-footer-->
-          </div><!-- /.box -->
+		<div class="content-wrapper">
+			<!-- Content Header (Page header) -->
+			<section class="content-header">
+				<h1>
+					Blank page <small>it all starts here</small>
+				</h1>
+				<ol class="breadcrumb">
+					<li><a th:href="@{/home}"><i class="fa fa-dashboard"></i> Home</a></li>
+					<li><a href="#">Examples</a></li>
+					<li class="active">Blank page</li>
+				</ol>
+			</section>
 
-        </section><!-- /.content -->
-      </div>
-			</div>
+			<!-- Main content -->
+			<section class="content">
 
-			<div th:replace="fragments/footer :: footer">...</div>
-			<!--   <section class="content">
+				<!-- Default box -->
+				
+				<!-- <div class="box">
+					<div class="box-header with-border">
+						<h3 class="box-title">Title</h3>
+						<div class="box-tools pull-right">
+							<button class="btn btn-box-tool" data-widget="collapse"
+								data-toggle="tooltip" title="Collapse">
+								<i class="fa fa-minus"></i>
+							</button>
+							<button class="btn btn-box-tool" data-widget="remove"
+								data-toggle="tooltip" title="Remove">
+								<i class="fa fa-times"></i>
+							</button>
+						</div>
+					</div> 
+
+
+					<div class="box-body">
+						<!-- Start creating your amazing application! -->
+
+
+
+
+						<!-- <div class="box-footer">Footer</div> -->
+						<!-- /.box-footer-->
+					<!-- </div> -->
+					<!-- /.box -->
+
+			<!-- 	</div> -->
+
+			</section>
+			<!-- /.content -->
+		</div>
+
+	</div>
+
+	<!-- <div th:replace="fragments/footer :: footer">...</div> -->
+	<!--   <section class="content">
         
         </section>-->
 
@@ -87,15 +102,15 @@
 
 
 
-			<script src="js/jQuery-2.1.4.min.js"></script>
+	<script src="js/jQuery-2.1.4.min.js"></script>
 
-			<script src="js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 
-			<script src="js/fastclick.min.js"></script>
+	<script src="js/fastclick.min.js"></script>
 
-			<script src="js/app.min.js"></script>
+	<script src="js/app.min.js"></script>
 
-			<script src="/js/demo.js"></script>
+	<script src="/js/demo.js"></script>
 </body>
 
 </html>
