code commit@Rahul
fixed login popup modal issue (data populate against login user then populate active financial year against company code and user name)

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -195,6 +195,8 @@
 							Gate Entry</a></li>
 					<li><a th:href="@{/mrn/}"><i class="fa fa-circle-o"></i>
 							Material Receipt Master</a></li>
+					<li><a th:href="@{/gatepass/}"><i class="fa fa-circle-o"></i>
+							Gate Pass</a></li>
 				</ul></li>
 
 
