--- a/src/main/resources/templates/layouts/Master/moduleMaster.html
+++ b/src/main/resources/templates/layouts/Master/moduleMaster.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
+<head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>EBS</title>
@@ -57,9 +57,9 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i> Admin</a></li>
+							<li><a href="#">Module</a></li>
+							<li class="active">Master</li>
 						</ol>
 					</section>
 
@@ -115,21 +115,24 @@
 													</div>
 
 
-													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio"
-															name="inlineRadioOptions" id="inlineRadio1" value="Y">
-														<label class="form-check-label" for="inlineRadio1"
-															th:field="*{active}">Active</label>
-													</div>
 
-													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio"
-															name="inlineRadioOptions" id="inlineRadio1" value="N">
-														<label class="form-check-label" for="inlineRadio1"
-															th:field="*{active}">In-Active</label>
+													<div class="form-group col-md-12">
+
+														<label class="form-label">Status</label>
+														<div class="custom-controls-stacked">
+
+															<label class="radio-inline"> <input type="radio"
+																value="Y" name="active" checked>
+																Active &nbsp;
+															</label> <label class="radio-inline"> <input type="radio"
+																value="N" name="active">Inactive
+															</label>
+
+														</div>
 													</div>
 
 												</div>
+
 												<!-- /.box-body -->
 
 												<div class="box-footer" style="margin: 10px">
@@ -162,34 +165,32 @@
 		</div>
 	</div>
 
+
 	<div th:replace="fragments/footer :: footer">...</div>
 
 	<script>
+		$(document).ready(function() {
+			var message = document.getElementById('mess').value
+			if (message != null && message !== "") {
 
-				$(document).ready(function () {
-					var message = document.getElementById('mess').value
-					if (message != null && message !== "") {
-
-						swal(message, "", "success", {
-							button: "OK",
-							hideClass: {
-								popup: 'animate__animated animate__fadeOutUp'
-							},
-						});
-					} else {
-						console.log("ajax request : " + message);
-					}
-
+				swal(message, "", "success", {
+					button : "OK",
+					hideClass : {
+						popup : 'animate__animated animate__fadeOutUp'
+					},
 				});
-			</script>
+			} else {
+				console.log("ajax request : " + message);
+			}
+
+		});
+	</script>
 
 	<script>
-
-				$("#moduleMasterForm").validate({
-					ignoreTitle: true
-				});
-
-			</script>
+		$("#moduleMasterForm").validate({
+			ignoreTitle : true
+		});
+	</script>
 
 	<!--   <section class="content">
         
