--- a/src/main/resources/templates/layouts/editview/editModule.html
+++ b/src/main/resources/templates/layouts/editview/editModule.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 </head>
 
@@ -31,9 +38,9 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i> Admin</a></li>
+							<li><a href="#">Module</a></li>
+							<li class="active">Edit</li>
 						</ol>
 					</section>
 
@@ -49,30 +56,31 @@
 							<div class="row">
 								<!-- left column -->
 								<div class="col-md-12">
-									<div class="col-md-2">
-									</div>
+									<div class="col-md-2"></div>
 
 
-									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
+									<div class="col-md-8 shadow bg-white rounded"
+										style="margin-top: 20px;">
 										<!-- general form elements -->
 										<div class="box box-primary">
 											<div class="box-header with-border">
 												<!--<h3 class="box-title">Category Master</h3>-->
-											</div><!-- /.box-header -->
+											</div>
+											<!-- /.box-header -->
 											<!-- form start -->
 											<form role="form" th:action="@{/module/}" method="POST"
 												th:object="${module}">
 												<div class="box-body">
 
 													<div class="form-group col-md-12">
-														<label for="inputEmail4">Module Code</label> <input type="text"
-															class="form-control" placeholder="module code"
-															th:field="*{moduleCode}">
+														<label for="inputEmail4">Module Code</label> <input
+															type="text" class="form-control"
+															placeholder="module code" th:field="*{moduleCode}">
 													</div>
 													<div class="form-group col-md-12">
 														<label for="inputPassword4">Module Name</label> <input
-															type="text" class="form-control" placeholder="module name"
-															th:field="*{moduleName}">
+															type="text" class="form-control"
+															placeholder="module name" th:field="*{moduleName}">
 													</div>
 													<div class="form-group col-md-12">
 														<label for="inputPassword4">Sequence Number</label> <input
@@ -81,40 +89,40 @@
 													</div>
 
 
-													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio"
-															name="inlineRadioOptions" id="inlineRadio1" value="Y">
-														<label class="form-check-label" for="inlineRadio1"
-															>Active</label>
+													<div class="form-group col-md-12">
+
+														<label class="form-label">Status</label>
+														<div class="custom-controls-stacked">
+
+															<label class="radio-inline"> <input type="radio"
+																value="Y" name="active" checked> Active &nbsp;
+															</label> <label class="radio-inline"> <input type="radio"
+																value="N" name="active">Inactive
+															</label>
+
+														</div>
 													</div>
 
-													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio"
-															name="inlineRadioOptions" id="inlineRadio1" value="N">
-														<label class="form-check-label" for="inlineRadio1"
-															>In-Active</label>
-													</div>
-
-												</div><!-- /.box-body -->
+												</div>
+												<!-- /.box-body -->
 
 												<div class="box-footer" style="margin: 10px">
 													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="button" value="Go back!" class="btn btn-danger"onclick="history.back()">
+													<input type="button" value="Go back!"
+														class="btn btn-danger" onclick="history.back()">
 												</div>
 
 
 											</form>
 
 
-										</div><!-- /.box -->
-										<div style="width: parent; text-align-last: right; margin:8px">
-											<a th:href="@{/module/list}">View All Module</a>
 										</div>
+										<!-- /.box -->
+
 									</div>
 
 
-									<div class="col-md-2">
-									</div>
+									<div class="col-md-2"></div>
 								</div>
 
 							</div>
@@ -123,16 +131,20 @@
 					</section>
 				</section>
 			</div>
-
-			<div th:replace="fragments/footer :: footer">...</div>
-			<!--   <section class="content">
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
 
 </html>
