--- a/src/main/resources/templates/layouts/loginPopup.html
+++ b/src/main/resources/templates/layouts/loginPopup.html
@@ -42,10 +42,10 @@
 								<div class="form-outline mb-4">
 									<div class="form-group col-md-12">
 										<label for="inputEmail4">Company</label> <select
-											class="form-control" id="company" onchange="selectCompany()" title="company"
-											required name="company" th:field="*{company}">
+											class="form-control" id="company" title="company"
+											required name="company" th:field="*{company}" onchange="selectCompany()">
 											<option value="">Select</option>
-											<option th:each="company :  ${listCompany}"
+											<option th:each="company :  ${companyList}"
 												th:text="${company.compName}"
 												th:value=" ${company.compCode}"></option>
 										</select>
@@ -59,6 +59,9 @@
 											class="form-control fyContainer" id="" onchange="" title="company"
 											required name="financialYear" th:field="*{financialYear.financialYearCode}">
 											<option value="">Select</option>
+											<option th:each="fy :  ${fyYearList}"
+												th:text="${fy.financialYear.financialYearCode}"
+												th:value=" ${fy.financialYear.financialYearCode}"></option>
 											
 										</select>
 									</div>
