code commit@Rahul
basic structure of material Requisition form

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -176,7 +176,7 @@
 
 
 						</ul></li>
-					<li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
+					
 				</ul></li>
 
 
@@ -193,10 +193,16 @@
 							class="fa fa-circle-o"></i> Item-Opening</a></li>
 					<li><a th:href="@{/gateentry/}"><i class="fa fa-circle-o"></i>
 							Gate Entry</a></li>
-					<li><a th:href="@{/mrn/}"><i class="fa fa-circle-o"></i>
-							Material Receipt Master</a></li>
+					
 					<li><a th:href="@{/gatepass/}"><i class="fa fa-circle-o"></i>
 							Gate Pass</a></li>
+							
+					<li><a th:href="@{/mrn/}"><i class="fa fa-circle-o"></i>
+							Material Receipt Master</a></li>
+					<li><a th:href="@{/inspection/}"><i class="fa fa-circle-o"></i>
+							Material Receipt Inspection</a></li>
+					<li><a th:href="@{/materialrequisition/}"><i class="fa fa-circle-o"></i>
+							Material Requisition</a></li>
 				</ul></li>
 
 
