--- a/src/main/resources/templates/layouts/Master/openIndent.html
+++ b/src/main/resources/templates/layouts/Master/openIndent.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
+<head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>EBS</title>
@@ -270,7 +270,7 @@
 																<th scope="col" class="text-center">Requisition
 																	Date<span style="color: red">*</span>
 																</th>
-																<th scope="col" class="text-center">Status</th>
+
 
 																<th scope="col" class="text-center">Indent Purpose
 																</th>
@@ -280,26 +280,28 @@
 														<tbody>
 															<tr id="addr0">
 
+																<td><input type="text" id="indItemDescription0"
+																	title="item description"
+																	class="form-control form-control-sm" readonly></td>
+
+
+
+																<!-- item description -->
 																<td><select
 																	class="select form-control form-control-sm"
-																	id="departmentDropdown" title="item code"
-																	name="opeIndentDetail[0].indItemCode" required>
+																	id="indItemCode0" title="item code"
+																	name="opeIndentDetail[0].indItemCode"
+																	onchange="selectItem()" required>
 																		<option value="">Select Item</option>
 																		<option th:each="item :  ${itemList}"
 																			th:text="${item.description}"
 																			th:value=" ${item.itemCode}"></option>
 																</select></td>
 
-																<!-- item description -->
-																<td><input type="text" id="indItemCode0"
-																	title="item code" class="form-control form-control-sm"
-																	readonly></td>
-
 																<!-- qty in stock -->
 																<td><input type="text"
 																	class="form-control form-control-sm" id="qtyInStock0"
-																	title="qty" required
-																	name="opeIndentDetail[0].qtyInStock"
+																	title="qty" name="opeIndentDetail[0].qtyInStock"
 																	style="text-align: right" readonly></td>
 
 
@@ -308,31 +310,32 @@
 																<!-- qt to procured -->
 
 																<td><input type="text"
-																	class="form-control form-control-sm" id="qtyProcured0"
-																	title="qty" name="opeIndentDetail[0].qtyProcured"
+																	class="form-control form-control-sm floatNumberField"
+																	id="qtyProcured0" title="qty"
+																	name="opeIndentDetail[0].qtyProcured"
 																	style="text-align: right" readonly></td>
 
 																<!-- pipeline indent qty  -->
 																<td><input type="text"
-																	class="form-control form-control-sm" id="qtyProcured0"
-																	title="pipline" required
+																	class="form-control form-control-sm floatNumberField"
+																	id="pipelineIndQty" title="pipline" required
 																	name="opeIndentDetail[0].pipelineQty"
-																	style="text-align: right"></td>
+																	style="text-align: right" readonly></td>
 
 																<!-- indent qty -->
 
 																<td><input type="text"
-																	class="form-control form-control-sm" id="indQty0"
-																	min="18" title="ind qty" required
+																	class="form-control form-control-sm floatNumberField"
+																	id="indQty0" min="18" title="ind qty" required
 																	name="opeIndentDetail[0].indQty"
-																	style="text-align: right"></td>
+																	style="text-align: right" onkeyup="indentQtyValue()"></td>
 
 
 																<!-- approved indent qty -->
 
 																<td><input type="text"
-																	class="form-control form-control-sm" id="ageTo"
-																	title="approvaed qty" required
+																	class="form-control form-control-sm floatNumberField"
+																	id="approvedQty0" title="approvaed qty" required
 																	name="opeIndentDetail[0].approvedQty"
 																	style="text-align: right"></td>
 
@@ -351,10 +354,10 @@
 																<!-- item rate -->
 
 																<td><input type="text"
-																	class="form-control form-control-sm"
-																	id="technicalQualification" required title="item rate"
+																	class="form-control form-control-sm floatNumberField"
+																	id="itemRate0" required title="item rate"
 																	name="opeIndentDetail[0].itemRate"
-																	style="text-align: right"></td>
+																	style="text-align: right" onkeyup="indentItemRate()"></td>
 
 
 																<!-- units  -->
@@ -365,13 +368,13 @@
 
 																<!-- total value inr -->
 																<td><input type="text"
-																	class="form-control form-control-sm" id="salaryFrom"
-																	title="Salary" readonly></td>
+																	class="form-control form-control-sm"
+																	id="totalValueInr0" title="Salary" readonly></td>
 
 																<!--total value  -->
 																<td><input type="text"
-																	class="form-control form-control-sm" id="salaryTo"
-																	required title="total value"
+																	class="form-control form-control-sm floatNumberField"
+																	id="totalValue0" required title="total value"
 																	name="opeIndentDetail[0].totalValue"
 																	style="text-align: right" readonly></td>
 
@@ -382,14 +385,6 @@
 																	style="width: 145px" required></td>
 
 
-																<!-- Status  -->
-
-
-																<td><input type="text"
-																	class="form-control form-control-sm"
-																	id="purStatusItemWise" required
-																	title="Purchase state wise"
-																	name="opeIndentDetail[0].purStatusItemWise"></td>
 
 																<!-- indent purpose -->
 
@@ -453,96 +448,154 @@
 
 
 	<script>
+		document.getElementById('indentDate').valueAsDate = new Date();
 
- document.getElementById('indentDate').valueAsDate = new Date();
- 
- 
-				var idIndex = 0;
-				$(document).ready(function () {
-					console.log("open indent detail is ready!");
-					var i = 1;
+		var idIndex = 0;
+		$(document)
+				.ready(
+						function() {
+							console.log("open indent detail is ready!");
+							var i = 1;
 
-					$('#add_row').click(function () {
-						idIndex++;
+							$('#add_row')
+									.click(
+											function() {
+												idIndex++;
 
-						$('#addr' + i).html(
+												$('#addr' + i)
+														.html(
 
-							"<td><select class='select form-control form-control-sm' id='departmentDropdown' title='item Name'name='opeIndentDetail[" + idIndex + "].indItemCode'required><option value=''>Select Item </option><option th:each='item :  ${itemList}'th:text='${item.description}'th:value='${item.itemCode}'></option></select></td>"
-							+ "<td><input type='text' readonly id='indItemCode0' title=''class='form-control form-control-sm'required></td>"
-						
-							+ "<td><input type='text' class='form-control form-control-sm' id='qtyInStock0' title='' required name='opeIndentDetail[" + idIndex + "].qtyInStock' readonly></td>"
-							
-								+ "<td><input type='text'class='form-control form-control-sm'id='qtyProcured0' title=''name='opeIndentDetail[" + idIndex + "].qtyProcured' readonly></td>"
-							
-							+ "<td><input type='text'class='form-control form-control-sm' id='qtyProcured0' title='' requiredname='opeIndentDetail[" +  idIndex + "].pipelineQty'></td>"
-							
-							+ "<td><input type='text'class='form-control form-control-sm'id='indQty0' min='18' title='Age from'required name='opeIndentDetail[" + idIndex + "].indQty'>"
-							
-							
-							
-							
-						
-							
+																"<td><select class='select form-control form-control-sm' id='departmentDropdown' title='item Name'name='opeIndentDetail[" + idIndex + "].indItemCode'required><option value=''>Select Item </option><option th:each='item :  ${itemList}'th:text='${item.description}'th:value='${item.itemCode}'></option></select></td>"
+																		+ "<td><input type='text' readonly id='indItemCode0' title=''class='form-control form-control-sm'required></td>"
 
-							
-							+ "<td><input type='text' class='form-control form-control-sm'id=''ageTo' requiredname='opeIndentDetail[" + idIndex + "].approvedQty'></td>"
-							+ "<td><input type='text'class='form-control form-control-sm'id='expMaxMonth' requiredtitle='max experience'name='opeIndentDetail[" + idIndex + "].currencyCode'></td>"
-							+ "<td><input type='text' class='form-control form-control-sm' id='technicalQualification' required title='Technical Qualification' name='opeIndentDetail[" + idIndex + "].itemRate'></td>"
-							+ "<td><input type='text' class='form-control form-control-sm' id='salaryTo' required></td>"
-							+ "<td><input type='text' redaonly class='form-control form-control-sm'id='salaryFrom' title='Salary'></td>"
-							+ "<td><input type='text' class='form-control form-control-sm' id='salaryTo' requiredname='opeIndentDetail[" + idIndex + "].totalValue' readonly></td>"
-							+ "<td><input type='date' class='form-control form-control-sm' id='salaryTo' style='width: 145px' required></td>"
-							+ "<td><input type='text' class='form-control form-control-sm' id='purStatusItemWise' required title='minimum experience' name='opeIndentDetail[" + idIndex + "].purStatusItemWise'> </td>"
-							+ "<td><input type='text' class='form-control form-control-sm' id='indPurpose0' required name='opeIndentDetail[" + idIndex + "].indPurpose'></td>"
-						);
+																		+ "<td><input type='text' class='form-control form-control-sm' id='qtyInStock0' title='' required name='opeIndentDetail[" + idIndex + "].qtyInStock' readonly></td>"
 
-						$('#example').append(
-							'<tr id="addr'
-							+ (i + 1)
-							+ '"></tr>');
+																		+ "<td><input type='text'class='form-control form-control-sm'id='qtyProcured0' title=''name='opeIndentDetail[" + idIndex + "].qtyProcured' readonly></td>"
 
-						i++;
-					});
+																		+ "<td><input type='text'class='form-control form-control-sm' id='qtyProcured0' title='' requiredname='opeIndentDetail[" +  idIndex + "].pipelineQty'></td>"
 
-					$("#delete_row").click(function () {
-						if (i > 1) {
-							$("#addr" + (i - 1)).html('');
+																		+ "<td><input type='text'class='form-control form-control-sm'id='indQty0' min='18' title='Age from'required name='opeIndentDetail[" + idIndex + "].indQty'>"
 
-							i--;
-							idIndex--;
-						}
-					});
+																		+ "<td><input type='text' class='form-control form-control-sm'id=''ageTo' requiredname='opeIndentDetail[" + idIndex + "].approvedQty'></td>"
+																		+ "<td><input type='text'class='form-control form-control-sm'id='expMaxMonth' requiredtitle='max experience'name='opeIndentDetail[" + idIndex + "].currencyCode'></td>"
+																		+ "<td><input type='text' class='form-control form-control-sm' id='technicalQualification' required title='Technical Qualification' name='opeIndentDetail[" + idIndex + "].itemRate'></td>"
+																		+ "<td><input type='text' class='form-control form-control-sm' id='salaryTo' required></td>"
+																		+ "<td><input type='text' redaonly class='form-control form-control-sm'id='salaryFrom' title='Salary'></td>"
+																		+ "<td><input type='text' class='form-control form-control-sm' id='salaryTo' requiredname='opeIndentDetail[" + idIndex + "].totalValue' readonly></td>"
+																		+ "<td><input type='date' class='form-control form-control-sm' id='salaryTo' style='width: 145px' required></td>"
+																		+ "<td><input type='text' class='form-control form-control-sm' id='purStatusItemWise' required title='minimum experience' name='opeIndentDetail[" + idIndex + "].purStatusItemWise'> </td>"
+																		+ "<td><input type='text' class='form-control form-control-sm' id='indPurpose0' required name='opeIndentDetail[" + idIndex + "].indPurpose'></td>");
 
-				});
+												$('#example').append(
+														'<tr id="addr'
+																+ (i + 1)
+																+ '"></tr>');
 
+												i++;
+											});
 
-			</script>
+							$("#delete_row").click(function() {
+								if (i > 1) {
+									$("#addr" + (i - 1)).html('');
 
+									i--;
+									idIndex--;
+								}
+							});
 
-	<script>
-
-				$(document).ready(function () {
-					var message = document.getElementById('mess').value
-					if (message != null && message !== "") {
-
-						swal(message, "", "success", {
-							button: "OK",
-							hideClass: {
-								popup: 'animate__animated animate__fadeOutUp'
-							},
 						});
-					} else {
-						console.log("ajax request : " + message);
-					}
-
-				});
-			</script>
+	</script>
 
 
 	<script>
-				//let txt = $("#editDistName option:selected").text();
-				//$("#employeename").val(data.empName);
-			</script>
+		function selectItem() {
+
+			var itemCode = document.getElementById("indItemCode0").value;
+			console.log("Item code : " + itemCode);
+
+			$.ajax({
+				type : "GET",
+				url : "itemdetail/" + itemCode,
+
+				success : function(data) {
+
+					document.getElementById("qtyProcured0").value = 0;
+					document.getElementById("approvedQty0").value = 0;
+					document.getElementById("totalValueInr0").value = 0;
+					document.getElementById("totalValue0").value = 0;
+					$("#indQty0").val(0);
+					$("#itemRate0").val(0);
+					$("#qtyInStock0").val(0);
+
+					console.log("response data : " + data);
+					console.log("data value is : " + data.item.description)
+
+					$("#indItemDescription0").val(data.item.itemCode);
+					$("#qtyInStock0").val(data.itemOpening.currentStock)
+
+				},
+				error : function() {
+					console.log("Error");
+				}
+			});
+
+		}
+
+		function indentQtyValue() {
+			
+			var indQty = document.getElementById("indQty0").value;
+			console.log("indent qty : " + indQty)
+
+			document.getElementById("qtyProcured0").value = indQty;
+			document.getElementById("approvedQty0").value = indQty;
+		}
+
+		function indentItemRate() {
+
+			var itemRate = document.getElementById("itemRate0").value;
+			var indQty = document.getElementById("indQty0").value;
+
+			total = itemRate * indQty;
+			console.log("total value is : " + total)
+
+			document.getElementById("totalValueInr0").value = total;
+			document.getElementById("totalValue0").value = total;
+		}
+
+		$(document).ready(function() {
+			
+			var message = document.getElementById('mess').value
+			if (message != null && message !== "") {
+
+				swal(message, "", "success", {
+					button : "OK",
+					hideClass : {
+						popup : 'animate__animated animate__fadeOutUp'
+					},
+				});
+			} else {
+				console.log("ajax request : " + message);
+			}
+
+		});
+	</script>
+
+
+	<!-- for decimal only  -->
+	<script type="text/javascript">
+	
+		$(document).ready(function() {
+			$(".floatNumberField").change(function() {
+				$(this).val(parseFloat($(this).val()).toFixed(2));
+			});
+		});
+	</script>
+
+
+	<script>
+		//let txt = $("#editDistName option:selected").text();
+		//$("#employeename").val(data.empName);
+	</script>
 
 	<script src="../../js/jQuery-2.1.4.min.js"
 		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
