code commit@Rahul
structure of issue slip

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -203,6 +203,8 @@
 							Material Receipt Inspection</a></li>
 					<li><a th:href="@{/materialrequisition/}"><i class="fa fa-circle-o"></i>
 							Material Requisition</a></li>
+					<li><a th:href="@{/materialrequisition/approval}"><i class="fa fa-circle-o"></i>
+							Material Requisition Approval</a></li>
 				</ul></li>
 
 
