--- a/src/main/resources/templates/layouts/Master/materialRequisitionApproval.html
+++ b/src/main/resources/templates/layouts/Master/materialRequisitionApproval.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EBS</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>EBS</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 
 </head>
@@ -36,50 +43,43 @@
 
 								<div class="box box-primary">
 									<div class="box-header with-border">
-										<h3 class="box-title">Quotation Comparitive and Approval</h3>
+										<h3 class="box-title">Material Requisition Approval</h3>
 									</div>
 									<!-- form start -->
 									<form id="validation-form" action="#" method="post">
 
-										<table class="table table-striped table-bordered table-sm" style="width: 100%">
+										<table class="table table-striped table-bordered table-sm"
+											style="width: 100%">
 											<thead>
 												<tr>
-													<th scope="col" class="text-center">Quotation Number</th>
-													<th scope="col" class="text-center">Quotation Date</th>
-													<th scope="col" class="text-center">Quotation Type</th>
-													<th scope="col" class="text-center">Indent Number</th>
-													<th scope="col" class="text-center">Indent Date</th>
-													<th scope="col" class="text-center">Supplier Name</th>
-													<th scope="col" class="text-center">Item Code</th>
-													<th scope="col" class="text-center">Item Quantity</th>
-													<th scope="col" class="text-center">Total Value(INR)</th>
-													<th scope="col" class="text-center">Approval Status</th>
+													<th scope="col" class="text-center">Requisition Number</th>
+													<th scope="col" class="text-center">Requisition Date</th>
+													<th scope="col" class="text-center">Employee Name</th>
+													<th scope="col" class="text-center">Approved Status</th>
+													<th scope="col" class="text-center">Remarks</th>
+													
+													<th scope="col" class="text-center">Action</th>
 													<th scope="col" class="text-center">View</th>
 
 												</tr>
 											</thead>
 											<tbody>
 
-												<tr th:each="quotation : ${listQuotationDetail}">
+												<!-- <tr th:each="quotation : ${listQuotationDetail}">
 													<td><label th:text="${quotation.quotNo}"></label></td>
 
 													<td><label th:text="${quotation.quotDate}"></label></td>
 
 													<td><label th:text="${quotation.quotType}"></label></td>
 
-													<td><label th:text="${quotation.indentNu}"></label>
-													</td>
+													<td><label th:text="${quotation.indentNu}"></label></td> -->
 
-													<td><label th:text="${quotation.indentDate}"></label>
-													</td>
-													<td><label th:text="${quotation.suplierCode}"></label></td>
+													
 
-													<td><label th:text="${quotation.itemCode}"></label></td>
+													
 
-													<td><label>value</label></td>
-
-													<td><label th:text="${quotation.approvalStatus1}">testing</label>
-													</td>
+													
+													
 
 
 
@@ -87,7 +87,8 @@
 
 
 
-													<td class="text-center" th:if="${quotation.approvalStatus1 == 'Y'}">
+													<!-- <td class="text-center"
+														th:if="${quotation.approvalStatus1 == 'Y'}">
 														<div class="dropdown show">
 															<a class="btn btn-primary dropdown-toggle" href="#"
 																role="button" id="dropdownMenuLink"
@@ -103,9 +104,10 @@
 
 															</div>
 														</div>
-													</td>
+													</td> -->
 
-													<td class="text-center" th:if="${quotation.approvalStatus1 == 'N'}">
+													<!-- <td class="text-center"
+														th:if="${quotation.approvalStatus1 == 'N'}">
 														<div class="dropdown show">
 															<a class="btn btn-primary dropdown-toggle" href="#"
 																role="button" id="dropdownMenuLink"
@@ -121,9 +123,10 @@
 
 															</div>
 														</div>
-													</td>
-
-													<td class="text-center" th:if="${quotation.approvalStatus1 == 'C'}">
+													</td> -->
+<!-- 
+													<td class="text-center"
+														th:if="${quotation.approvalStatus1 == 'C'}">
 														<div class="dropdown show">
 															<a class="btn btn-primary dropdown-toggle" href="#"
 																role="button" id="dropdownMenuLink"
@@ -140,13 +143,13 @@
 															</div>
 														</div>
 													</td>
+ -->
 
 
 
-
-													<td class="text-center"><a class="btn btn-primary"
-															th:href="@{/approvalquotationdetail/view/{id}/(id=${quotation.quotNo})}">
-															View</a></td>
+													<!-- <td class="text-center"><a class="btn btn-primary"
+														th:href="@{/approvalquotationdetail/view/{id}/(id=${quotation.quotNo})}">
+															View</a></td> -->
 
 
 												</tr>
@@ -171,16 +174,21 @@
 					</div>
 				</section>
 			</div>
+		</div>
+	</div>
 
-			<div th:replace="fragments/footer :: footer">...</div>
-			<!--   <section class="content">
+	<div th:replace="fragments/footer :: footer">...</div>
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 
 </body>
 
